# fashion

./: .gitignore  CHANGELOG.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri-package.yml
docs/superpowers/plans/: 2026-04-05-icon-system.md  2026-04-05-mini-player-polish.md  2026-04-05-mini-player-sync.md  2026-04-05-mini-window-and-small-icon.md  2026-04-06-duration-layout.md  2026-04-06-local-music-layout.md  2026-04-06-mini-player-edge-auto-hide.md  2026-04-06-single-row-card-layout.md  2026-04-07-mini-player-dock-stability.md  2026-04-07-mini-player-edge-reveal-polish.md  2026-04-09-security-and-ux-hardening.md
docs/superpowers/specs/: 2026-04-05-icon-system-design.md  2026-04-05-mini-player-polish-design.md  2026-04-05-mini-player-sync-design.md  2026-04-05-mini-window-and-small-icon-design.md  (+6 more)
scripts/: tauri-runner.mjs
src/: App.vue  DesktopLyricApp.vue  MiniPlayerApp.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_storage.rs  commands.rs  lib.rs  main.rs  window_chrome.rs
src/api/: music.ts
src/components/: AppPanels.vue  DownloadButton.vue  FavoritesPanel.vue  HistoryPanel.vue  LocalLibraryPanel.vue  LyricMarqueeText.vue  LyricPanel.vue  MobileHeader.vue  MobilePlayerDock.vue  MobileTabBar.vue  PlayerBar.vue  PlaylistPanel.vue  SearchPanel.vue  SearchRowMoreMenu.vue  SettingsPanel.vue  SettingsSectionNav.vue  SharedSongRow.vue  SharedSongRowLayout.test.ts  Sidebar.vue  TitleBar.vue
src/composables/: useAppNavigation.test.ts  useAppNavigation.ts
src/stores/: library.test.ts  library.ts  localLibrary.test.ts  localLibrary.ts  media.test.ts  media.ts  player.ts  storage.ts  ui.test.ts  ui.ts
src/styles/: global.css
src/utils/: cache.ts  desktopLyric.ts  formatters.test.ts  formatters.ts  iconography.ts  lyrics.test.ts  lyrics.ts  miniPlayer.test.ts  miniPlayer.ts  persistence.test.ts  persistence.ts  runtime.ts  security.ts  tray.ts
