[package]
name = "fashion-music"
version = "1.2.0"
edition = "2021"

[lib]
name = "fashion_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fashion-music"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
rfd = "0.16.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }
windows-version = "0.1.7"

[profile.release]
panic = "abort"
opt-level = 3
